welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:16: error: type mismatch;
 found   : Unit
 required: Boolean
      if (b <= 0) {
      ^posNeg:15: error: type mismatch;
 found   : Unit
 required: Boolean
    if (a <= 0) {
    ^